--- a/international_global.html
+++ b/international_global.html
@@ -37,21 +37,23 @@
 <main class="centered-content-block humanities-course fade-in-section">
   <h1>International & Global (IG)</h1>
   <h2>POLS 2100 – International Politics</h2>
-  <p>This course pulled no punches. It asked us to break down the motives behind world conflict, diplomacy, and global decision-making—and gave me the perfect excuse to roast U.S. foreign policy with citations. My final project? A theory breakdown of the U.S. invasion and withdrawal from Afghanistan through the lens of IR theory.</p>
+  <p><em>Theories, but make it war-core.</em> This course dropped us into global conflict, diplomacy, and survival of the slickest. I took the assignment and ran with it — all the way through drone strikes, democracy lies, and feminist IR tea.</p>
 
-  <h2>Signature Assignment: IR Theory & Afghanistan</h2>
-  <p>This embedded paper explores the U.S. occupation of Afghanistan (2001–2021) through Realism and Liberalism—aka Power and PR. Strap in.</p>
+  <h2>Signature Assignment: Realism, Liberalism & the Afghanistan Gag</h2>
+  <p>We were told to explain the U.S. involvement in Afghanistan (2001–2021) using International Relations theory. What came out was part political analysis, part academic read, part international roast session. If Realism was the strategy, Liberalism was the spin team. Here's my full breakdown, now scrollable and scroll-worthy.</p>
 
-  <div style="text-align: center; margin: 30px auto;">
-    <iframe src="files/FINAL DRAFT - IR THEORY.pdf" width="100%" height="500px" style="border: none; border-radius: 10px; box-shadow: 0 0 15px rgba(0,188,212,0.4); max-width: 850px;"></iframe>
+  <div style="text-align: center; margin: 40px auto;">
+    <iframe src="files/FINAL DRAFT - IR THEORY.pdf" width="100%" height="900px" style="border: none; border-radius: 12px; max-width: 950px; box-shadow: 0 0 20px rgba(0, 188, 212, 0.5);"></iframe>
   </div>
 
   <h2>Reflection</h2>
-  <p>Writing this paper gave me the perfect opportunity to look at international politics and say: “Y’all really thought this was subtle?” The assignment asked me to choose the best international relations theory or theories to explain why the U.S. invaded, stayed, and then dipped out of Afghanistan between 2001 and 2021. So I got to work, diving into the mess that is global policy, war decisions, and diplomatic branding...</p>
+  <div style="max-width: 850px; margin: 0 auto; font-size: 1.1em; line-height: 1.75;">
+    <p>Writing this paper gave me the perfect opportunity to look at international politics and say: “Y’all really thought this was subtle?” The assignment asked me to choose the best international relations theory or theories to explain why the U.S. invaded, stayed, and then dipped out of Afghanistan between 2001 and 2021...</p>
 
-  <p>[continue with all 3 paragraphs you posted above here — formatted cleanly and spaced like the Humanities page]</p>
+    <!-- continue adding the rest of your reflection paragraphs here -->
+  </div>
 
-  <div style="text-align: center;">
+  <div style="text-align: center; margin-top: 50px;">
     <a href="courses.html" class="button">← Back to Courses</a>
   </div>
 </main>
