--- a/international_global.html
+++ b/international_global.html
@@ -43,7 +43,14 @@
   <p>We were told to explain the U.S. involvement in Afghanistan (2001–2021) using International Relations theory. What came out was part political analysis, part academic read, part international roast session. If Realism was the strategy, Liberalism was the spin team. Here's my full breakdown, now scrollable and scroll-worthy.</p>
 
   <div style="text-align: center; margin: 40px auto;">
-    <iframe src="files/FINAL DRAFT - IR THEORY.pdf" width="100%" height="900px" style="border: none; border-radius: 12px; max-width: 950px; box-shadow: 0 0 20px rgba(0, 188, 212, 0.5);"></iframe>
+    <div style="text-align: center; margin: 40px auto;">
+  <iframe 
+    src="https://docs.google.com/gview?url=https://jesusa0416.github.io/eportfolio2/files/FINAL%20DRAFT%20-%20IR%20THEORY.pdf&embedded=true" 
+    style="width:100%; max-width:950px; height:1000px; border:none; border-radius:12px; box-shadow:0 0 20px rgba(0,188,212,0.5);" 
+    sandbox="allow-scripts allow-same-origin">
+  </iframe>
+</div>
+
   </div>
 
   <h2>Reflection</h2>
