--- a/international_global.html
+++ b/international_global.html
@@ -37,9 +37,11 @@
 <main class="centered-content-block humanities-course fade-in-section">
   <h1>International & Global (IG)</h1>
   <h2>POLS 2100 – International Politics</h2>
+  <p>Introduction to the basic theories, concepts, processes and relationships in the global arena. Emphasis is placed on conflict and cooperation among nation-states and non-state actors. Students learn about power dynamics among international actors, the influence of theory on explanation as well as important global issues in order to build an understanding of our interconnected world.</p>
+  
   <p><em>Theories, but make it war-core.</em> This course dropped us into global conflict, diplomacy, and survival of the slickest. I took the assignment and ran with it — all the way through drone strikes, democracy lies, and feminist IR tea.</p>
 
-  <h2>Signature Assignment: Realism, Liberalism & the Afghanistan Gag</h2>
+  <h2>Signature Assignment: IR Theory and Afghanistan</h2>
   <p>We were told to explain the U.S. involvement in Afghanistan (2001–2021) using International Relations theory. What came out was part political analysis, part academic read, part international roast session. If Realism was the strategy, Liberalism was the spin team. Here's my full breakdown, now scrollable and scroll-worthy.</p>
 
   <div style="text-align: center; margin: 40px auto;">
