--- a/international_global.html
+++ b/international_global.html
@@ -92,15 +92,20 @@ function toggleMenu() {
 <script>
 document.addEventListener('DOMContentLoaded', function() {
   const faders = document.querySelectorAll('.fade-in-section');
-  const appearOptions = { threshold: 0.2, rootMargin: "0px 0px -100px 0px" };
-  const appearOnScroll = new IntersectionObserver(function(entries, appearOnScroll) {
+  const appearOptions = {
+    threshold: 0.05,
+    rootMargin: "0px 0px -10% 0px"
+  };
+
+  const appearOnScroll = new IntersectionObserver(function(entries, observer) {
     entries.forEach(entry => {
       if (entry.isIntersecting) {
         entry.target.classList.add('is-visible');
-        appearOnScroll.unobserve(entry.target);
+        observer.unobserve(entry.target);
       }
     });
   }, appearOptions);
+
   faders.forEach(fader => {
     appearOnScroll.observe(fader);
   });
