--- a/international_global.html
+++ b/international_global.html
@@ -35,7 +35,7 @@
 </div>
 
 <main class="centered-content-block humanities-course fade-in-section">
-  <h1>International & Global (IG)</h1>
+  <h1>International & Global (IG) - POLS2100</h1>
   <h2>POLS 2100 – International Politics</h2>
   <p>Introduction to the basic theories, concepts, processes and relationships in the global arena. Emphasis is placed on conflict and cooperation among nation-states and non-state actors. Students learn about power dynamics among international actors, the influence of theory on explanation as well as important global issues in order to build an understanding of our interconnected world.</p>
   
