--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <canvas id="c" style="position: fixed; top: 0; left: 0; z-index: -1;"></canvas>
+    <canvas id="c" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: -9999; pointer-events: none;"></canvas>
     <nav>
          <div class="nav-container">
             <ul id="nav-links">
@@ -115,6 +115,14 @@
         targets.forEach(target => observer.observe(target));
         // --- End Intersection Observer ---
         <script>
+         const c = document.getElementById("c");
+         const a = c.getContext("2d");
+         function resizeCanvas() {
+           c.width = window.innerWidth;
+           c.height = window.innerHeight;
+          }
+          resizeCanvas();
+          window.addEventListener('resize', resizeCanvas);
         const c = document.getElementById("c");
         const a = c.getContext("2d");
         let e = [], h = [], O = c.width = innerWidth, Q = c.height = innerHeight;
