--- a/index.html
+++ b/index.html
@@ -1,195 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Jesús Lopez Aguilar - ePortfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+  <title>Jesús Lopez Aguilar - ePortfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <style>
+    /* Make sure nav stays above canvas */
+    #hamburger-menu,
+    .mobile-nav,
+    .nav-container {
+      position: relative;
+      z-index: 999;
+    }
+  </style>
 </head>
 
 <body>
-    <canvas id="c" style="position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:-1;pointer-events:none;"></canvas>
-    <nav>
-         <div class="nav-container">
-            <ul id="nav-links">
-                <li><a href="index.html" class="active-nav-link">Home</a></li> <li><a href="about.html">About Me</a></li>
-                <li><a href="courses.html">Courses</a></li>
-                <li><a href="achievements.html">Achievements</a></li>
-                <li><a href="projects.html">Personal Projects</a></li>
-            </ul>
-        </div>
-    </nav>
+  <!-- HEART CANVAS -->
+  <canvas id="c" style="position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:-1;pointer-events:none;"></canvas>
 
-    <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
-        <div></div>
-        <div></div>
-        <div></div>
+  <nav>
+    <div class="nav-container">
+      <ul id="nav-links">
+        <li><a href="index.html" class="active-nav-link">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="achievements.html">Achievements</a></li>
+        <li><a href="projects.html">Personal Projects</a></li>
+      </ul>
     </div>
+  </nav>
 
-    <div class="mobile-nav" id="mobile-nav">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Me</a>
-        <a href="courses.html">Courses</a>
-        <a href="achievements.html">Achievements</a>
-        <a href="projects.html">Personal Projects</a>
+  <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
+    <div></div><div></div><div></div>
+  </div>
+
+  <div class="mobile-nav" id="mobile-nav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About Me</a>
+    <a href="courses.html">Courses</a>
+    <a href="achievements.html">Achievements</a>
+    <a href="projects.html">Personal Projects</a>
+  </div>
+
+  <main>
+    <div class="name-center fade-in-section">
+      <h1>Welcome to my ePortfolio.</h1>
+      <h2>This site was crafted by Jesús Lopez Aguilar, stitched together by seven mood swings, fueled by Adderall, delusion, ambition, and everything nice.</h2>
+      <p>This space means everything. I coded it by hand, and it took longer than it takes cartoons to finish a Tallis drawing for inmates — and with far less emotional stability.</p>
+      <p>Feel free to look around. If you find a bug (on the site or crawling near you), do yourself a favor and keep it to yourself.</p>
+      <p>I don't tolerate bugs. Digital or real. Either one will send me into a full mental spiral and I will not recover gracefully.</p>
+      <p>You’ve been warned. Enjoy the chaos.</p>
+      <a href="before-we-begin.html" class="button">Let's Explore</a>
     </div>
+  </main>
 
-    <main>
-        <div class="name-center fade-in-section">
-            <h1>Welcome to my ePortfolio.</h1>
-            <h2>This site was crafted by Jesús Lopez Aguilar, stitched together by seven mood swings, fueled by Adderall, delusion, ambition, and everything nice.</h2>
-            <p>This space means everything. I coded it by hand, and it took longer than it takes cartoons to finish a Tallis drawing for inmates — and with far less emotional stability.</p>
-            <p>Feel free to look around. If you find a bug (on the site or crawling near you), do yourself a favor and keep it to yourself.</p>
-            <p>I don't tolerate bugs. Digital or real. Either one will send me into a full mental spiral and I will not recover gracefully.</p>
-            <p>You’ve been warned. Enjoy the chaos.</p>
-            <a href="before-we-begin.html" class="button">Let's Explore</a>
-        </div>
-    </main> <footer>
-        <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
-    </footer>
+  <footer>
+    <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
+  </footer>
 
-    <script>
-        // Function to toggle the mobile menu, body scroll lock, AND hamburger animation class
-        function toggleMenu() {
-            const mobileNav = document.getElementById('mobile-nav');
-            const hamburgerIcon = document.getElementById('hamburger-menu'); // Get the hamburger icon
-            const body = document.body;
+  <!-- MAIN FUNCTIONALITY -->
+  <script>
+    // Toggle mobile nav
+    function toggleMenu() {
+      const mobileNav = document.getElementById('mobile-nav');
+      const hamburgerIcon = document.getElementById('hamburger-menu');
+      const body = document.body;
 
-            mobileNav.classList.toggle('active');
-            hamburgerIcon.classList.toggle('is-active'); // Toggle hamburger animation class
-
-            if (mobileNav.classList.contains('active')) {
-                body.classList.add('no-scroll');
-            } else {
-                body.classList.remove('no-scroll');
-            }
-        }
-
-        // --- Touch Event Listeners for Mobile Glow ---
-        document.querySelectorAll('.mobile-nav a').forEach(link => {
-            let touchInitiated = false;
-            link.addEventListener('touchstart', function(event) {
-                this.classList.add('link-active-glow');
-                touchInitiated = true;
-            });
-            link.addEventListener('touchend', function() {
-                if (touchInitiated) {
-                    setTimeout(() => { this.classList.remove('link-active-glow'); }, 150);
-                }
-                touchInitiated = false;
-            });
-            link.addEventListener('touchcancel', function() {
-                 if (touchInitiated) { this.classList.remove('link-active-glow'); }
-                 touchInitiated = false;
-            });
-            link.addEventListener('click', () => {
-                const mobileNav = document.getElementById('mobile-nav');
-                const hamburgerIcon = document.getElementById('hamburger-menu'); // Need hamburger here too
-                if (mobileNav.classList.contains('active')) {
-                    mobileNav.classList.remove('active');
-                    hamburgerIcon.classList.remove('is-active'); // Ensure hamburger resets if link clicked
-                    document.body.classList.remove('no-scroll');
-                }
-                setTimeout(() => { if (link.classList.contains('link-active-glow')) { link.classList.remove('link-active-glow'); } }, 150);
-                 touchInitiated = false;
-            });
-        });
-
-        // --- Intersection Observer for Scroll Animations ---
-        const observerOptions = {
-          root: null, rootMargin: '0px', threshold: 0.1
-        };
-        const observerCallback = (entries, observer) => {
-          entries.forEach(entry => {
-            if (entry.isIntersecting) {
-              entry.target.classList.add('is-visible');
-              observer.unobserve(entry.target); // Stop observing once visible
-            }
-          });
-        };
-        const observer = new IntersectionObserver(observerCallback, observerOptions);
-        const targets = document.querySelectorAll('.fade-in-section');
-        targets.forEach(target => observer.observe(target));
-        // --- End Intersection Observer ---
-<script>
-  const c = document.getElementById("c");
-  const a = c.getContext("2d");
-
-  function resizeCanvas() {
-    c.width = window.innerWidth;
-    c.height = window.innerHeight;
-  }
-  resizeCanvas();
-  window.addEventListener('resize', resizeCanvas);
-
-  let e = [], h = [], v = 32, M = Math, R = M.random, C = M.cos, Y = 6.3;
-  const O = () => c.width, Q = () => c.height;
-
-  for (let i = 0; i < Y; i += .2) {
-    h.push([
-      O() / 2 + 180 * M.pow(M.sin(i), 3),
-      Q() / 2 + 10 * (-(15 * C(i) - 5 * C(2 * i) - 2 * C(3 * i) - C(4 * i)))
-    ]);
-  }
-
-  for (let i = 0; i < v; i++) {
-    const f = [], x = R() * O(), y = R() * Q();
-    const H = i / v * 80 + 280, S = R() * 40 + 60, B = R() * 60 + 40;
-    for (let k = 0; k < v; k++) {
-      f[k] = {
-        x, y, X: 0, Y: 0,
-        R: (1 - k / v) + 1,
-        S: R() + 1,
-        q: ~~(R() * v),
-        D: i % 2 * 2 - 1,
-        F: R() * .2 + .7,
-        f: `hsla(${~~H},${~~S}%,${~~B}%,0.5)`
-      };
-    }
-    e[i] = f;
-  }
-
-  function render(p) {
-    a.fillStyle = p.f;
-    a.beginPath();
-    a.arc(p.x, p.y, p.R, 0, Y, 1);
-    a.closePath();
-    a.fill();
-  }
-
-  function loop() {
-    a.clearRect(0, 0, c.width, c.height);
-    for (let i = v; i--;) {
-      const f = e[i], u = f[0], q = h[u.q];
-      const D = u.x - q[0], E = u.y - q[1], G = M.sqrt(D * D + E * E);
-      if (G < 10) {
-        if (R() > .95) {
-          u.q = ~~(R() * v);
-        } else {
-          if (R() > .99) u.D *= -1;
-          u.q = (u.q + u.D + v) % v;
-        }
-      }
-      u.X += -D / G * u.S;
-      u.Y += -E / G * u.S;
-      u.x += u.X;
-      u.y += u.Y;
-      render(u);
-      u.X *= u.F;
-      u.Y *= u.F;
-      for (let k = 0; k < v - 1; k++) {
-        const T = f[k], N = f[k + 1];
-        N.x -= (N.x - T.x) * .7;
-        N.y -= (N.y - T.y) * .7;
-        render(N);
+      mobileNav.classList.toggle('active');
+      hamburgerIcon.classList.toggle('is-active');
+      if (mobileNav.classList.contains('active')) {
+        body.classList.add('no-scroll');
+      } else {
+        body.classList.remove('no-scroll');
       }
     }
-    requestAnimationFrame(loop);
-  }
 
-  loop();
-</script>
+    // Mobile nav touch link glow
+    document.querySelectorAll('.mobile-nav a').forEach(link => {
+      let touchInitiated = false;
+      link.addEventListener('touchstart', () => {
+        link.classList.add('link-active-glow');
+        touchInitiated = true;
+      });
+      link.addEventListener('touchend', () => {
+        if (touchInitiated) setTimeout(() => link.classList.remove('link-active-glow'), 150);
+        touchInitiated = false;
+      });
+      link.addEventListener('touchcancel', () => {
+        link.classList.remove('link-active-glow');
+        touchInitiated = false;
+      });
+      link.addEventListener('click', () => {
+        document.getElementById('mobile-nav').classList.remove('active');
+        document.getElementById('hamburger-menu').classList.remove('is-active');
+        document.body.classList.remove('no-scroll');
+      });
+    });
+
+    // Fade in observer
+    const observer = new IntersectionObserver((entries, observer) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('is-visible');
+          observer.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.1 });
+    document.querySelectorAll('.fade-in-section').forEach(el => observer.observe(el));
+  </script>
+
+  <!-- HEART CANVAS ANIMATION -->
+  <script>
+    const c = document.getElementById("c");
+    const a = c.getContext("2d");
+
+    function resizeCanvas() {
+      c.width = window.innerWidth;
+      c.height = window.innerHeight;
+    }
+    resizeCanvas();
+    window.addEventListener('resize', resizeCanvas);
+
+    let e = [], h = [], v = 32, M = Math, R = M.random, C = M.cos, Y = 6.3;
+    const O = () => c.width, Q = () => c.height;
+
+    for (let i = 0; i < Y; i += .2) {
+      h.push([
+        O() / 2 + 180 * M.pow(M.sin(i), 3),
+        Q() / 2 + 10 * (-(15 * C(i) - 5 * C(2 * i) - 2 * C(3 * i) - C(4 * i)))
+      ]);
+    }
+
+    for (let i = 0; i < v; i++) {
+      const f = [], x = R() * O(), y = R() * Q();
+      const H = i / v * 80 + 280, S = R() * 40 + 60, B = R() * 60 + 40;
+      for (let k = 0; k < v; k++) {
+        f[k] = {
+          x, y, X: 0, Y: 0,
+          R: (1 - k / v) + 1,
+          S: R() + 1,
+          q: ~~(R() * v),
+          D: i % 2 * 2 - 1,
+          F: R() * .2 + .7,
+          f: `hsla(${~~H},${~~S}%,${~~B}%,0.5)`
+        };
+      }
+      e[i] = f;
+    }
+
+    function render(p) {
+      a.fillStyle = p.f;
+      a.beginPath();
+      a.arc(p.x, p.y, p.R, 0, Y, 1);
+      a.closePath();
+      a.fill();
+    }
+
+    function loop() {
+      a.clearRect(0, 0, c.width, c.height);
+      for (let i = v; i--;) {
+        const f = e[i], u = f[0], q = h[u.q];
+        const D = u.x - q[0], E = u.y - q[1], G = M.sqrt(D * D + E * E);
+        if (G < 10) {
+          if (R() > .95) {
+            u.q = ~~(R() * v);
+          } else {
+            if (R() > .99) u.D *= -1;
+            u.q = (u.q + u.D + v) % v;
+          }
+        }
+        u.X += -D / G * u.S;
+        u.Y += -E / G * u.S;
+        u.x += u.X;
+        u.y += u.Y;
+        render(u);
+        u.X *= u.F;
+        u.Y *= u.F;
+        for (let k = 0; k < v - 1; k++) {
+          const T = f[k], N = f[k + 1];
+          N.x -= (N.x - T.x) * .7;
+          N.y -= (N.y - T.y) * .7;
+          render(N);
+        }
+      }
+      requestAnimationFrame(loop);
+    }
+
+    loop();
+  </script>
+</body>
 </html>
